Fix select text alignment on Safari

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -111,7 +111,7 @@
     .select
         @include box
         @include interactive-box
-        @apply px-3 py-2 rounded w-full appearance-none text-center cursor-pointer
+        @apply px-3 py-2 rounded w-full appearance-none text-center [text-align-last:center] cursor-pointer
 
     .input
         @include box
